name:                poly
version:             0.1.0.0
synopsis:            
-- description:
homepage:            
license:             MIT
author:              Silvan Mosberger
maintainer:          contact@infinisil.com
copyright:           2019 Silvan Mosberger
category:            
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  Readme.org

executable poly
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.12 && < 5
                     , polysemy
                     , polysemy-plugin
                     , mtl
  ghc-options:         -fplugin=Polysemy.Plugin
